k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: marafis-ui
spec:
  replicas: 2

  selector:
    matchLabels:
      app: marafis-ui

  template:
    metadata:
      labels:
        app: marafis-ui

    spec:
      containers:
        - name: marafis-ui
          image: ghcr.io/oacapps/marafis.com:latest

          ports:
            - containerPort: 80
