k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: marafis-ui
spec:
  selector:
    app: marafis-ui

  ports:
    - port: 80
      targetPort: 80
