k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: marafis-ui-ingress

  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - marafis.com
      secretName: marafis-tls

  rules:
    - host: marafis.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: marafis-ui
                port:
                  number: 80
